# local-docs-query

./: .gitignore  LICENSE  README.md  pyproject.toml
docsquery/: cli.py  config_manager.py  constants.py
docsquery/services/: indexer.py  rag.py  utils.py
