[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docsquery"
version = "0.1.0"

dependencies = [
  "typer",
  "rich",
  "chromadb",
  "langchain",
  "langchain-core",
  "langchain-chroma",
  "langchain-community",
  "unstructured[local-inference]",
  "python-pptx",
  "python-docx",
  "pypdf"
]

[project.scripts]
docsquery = "docsquery.cli:app"

[tool.setuptools.packages.find]
exclude = ["chroma_db*"]

[project.optional-dependencies]
hf = ["torch>=2.8.0", "transformers", "sentence-transformers", "langchain-huggingface"]
ollama = ["langchain-ollama"]