[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docsquery"
version = "0.1.0"

dependencies = [
  "typer",
  "rich",
  "chromadb",
  "langchain",
  "langchain-core",
  "huggingface-hub",
  "langchain-chroma",
  "langchain-community",
  "unstructured[docx,pptx]",
  "python-pptx",
  "python-docx",
  "pypdf",
  "rank_bm25"
]

[project.scripts]
docsquery = "docsquery.cli:app"

[tool.setuptools.packages.find]
exclude = ["chroma_db*"]

[project.optional-dependencies]
hf = ["torch>=2.8.0", "transformers", "sentence-transformers", "langchain-huggingface"]
ollama = ["langchain-ollama"]